styles.css
@font-face {
    font-family: "Graffiti";
    src: url("./font/DonGraffiti.otf");
  }

html {
    background-image: url("./images/wall.jpg");
    background-repeat: no-repeat;
    color: white;
}

body{
    display: flex;
    flex-direction: column;
}

.book-picker{
    align-self: center;
    align-items: center;
    display: flex;
    font-weight: bold;
    flex-direction: column;
    height: 90vh;
    justify-content: space-around;
    width: 80vw;
}

button{
  background: linear-gradient(#441b1b, #66292a);
  border: 2px solid black;
  color: white;
  cursor: pointer;
  font-size: .25em;
  font-weight: bold;
  width: 100%;
}

button:hover{
  background: white;
  border: 2px solid #441b1b;
  color: #441b1b;
  cursor: pointer;
  font-size: .25em;
  font-weight: bold;
  width: 100%;
}

.choices{
    color: white;
    font-family: "Graffiti", "Times New Roman";
    font-size: 5em;
    text-align: center;
    text-shadow: 6px 6px #0c0303;
}

select{
    background: linear-gradient(#803334, 10%, #441b1b, #803334 );
    border: 2px solid black;
    box-sizing: border-box;
    color: white;
    cursor: pointer;
    font-size: .25em;
    font-weight: bold;
    margin: 8px 0;
    min-height: fit-content;
    padding: 12px 20px;
    text-align: center;
    width: 100%;
  }

  .menu {
    align-items: center;
    background: black;
    bottom: 0;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    left: 0;
    list-style: none;
    position: fixed;
    right: 0;
    transform: translateY(-100%);
    transition: transform 0.5s;
    top: 0;
    z-index: 99;
  }

  .menu a{
    color: white;
    font-size: 6vw;
    font-family: "Graffiti";
    text-decoration: none;
  }

  .menu a:hover{
    text-decoration: underline;
  }

  .showMenu {
    transform: translateY(0);
  }

.spacer{
  height: 1vh;
}

/* Hamburger Menu */

.menu-button{
  align-items: center;
  cursor: pointer;
  display: flex;
  flex-shrink: 1;
  height: 55px;
  justify-content: center;
  left: 50%;
  position: relative;
  top: 0;
  transform: translateX(-50%);
  transition: all .5s ease-in-out;
  width: 50px;
  z-index: 100;
}

.menu-button-burger{
  background: #fff;
  border-radius: 5px;
  box-shadow: 0 2px 5px rgba(255,101,47,.2);
  height: 6px;
  transition: all .5s ease-in-out;
  width: 50px;
  z-index: 100;
}

.menu-button-burger::before, 
.menu-button-burger::after {
  background: #fff;
  border-radius: 5px;
  box-shadow: 0 2px 5px rgba(255,101,47,.2);
  content: '';
  height: 6px;
  position: absolute;
  transition: all .5s ease-in-out;
  width: 50px;
}

.menu-button-burger::before{
  transform: translateY(-16px);
}

.menu-button-burger::after{
  transform: translateY(16px);
}

/* Animation */

.menu-button.open .menu-button-burger{
  background: transparent;
  box-shadow: none;
  transform: translateX(-50px);
}

.menu-button.open .menu-button-burger::before {
  transform: rotate(45deg) translate(35px, -35px);
}

.menu-button.open .menu-button-burger::after{
 transform: rotate(-45deg) translate(35px, 35px);
}

/* Extras Page */

.image-thumbnail {
  border: solid white 2px;
  border-radius: 1%;
  max-height: 100%;
  max-width: 100%;
}

.gallery {
  background-color: black;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-rows: 1fr 1fr 1fr;
  grid-row-gap: 1vh;
  grid-column-gap: 1vw;
  left: 50%;
  padding: 20px;
  position: absolute;
  top: 20%;
  transform: translate(-40vw, -10vh);
  width: 80vw;
}

/* Slideshow POPUP */

.slider-popup {
  background-color: rgba(8, 8, 8, 0.11);
  display: grid;
  grid-template-columns: 0.5fr 1fr 0.5fr;
  grid-template-rows: 1fr;
  height: 90vh;
  left: 50px;
  position: absolute;
  right: 50px;
  top: 10vh;
}

.slider-middle {
  align-items: center;
  display: none;
  grid-row: 0.9fr 0.1fr;
  justify-items: center;
}

.slider-left {
  align-items: center;
  display: none;
  justify-items: center;
  opacity: 50%;
}

.slider-right {
  align-items: center;
  display: none;
  justify-items: center;
  opacity: 50%;
}

.slider-image {
  display: none;
  height: 100px;
  width: 100px;
}

.slider-image-visible {
  display: grid;
  height: 80vh;
  max-width: 100%;
}

.arrow-right {
  border-bottom: 16vw solid transparent;
  border-left: 16vw solid rgb(77, 85, 77);
  border-top: 16vw solid transparent;
  height: 0;
  width: 0;
}

.arrow-left {
  border-bottom: 160px solid transparent;
  border-right: 160px solid rgb(77, 85, 77);
  border-top: 160px solid transparent;
  height: 0px;
  width: 0px;
}

.progress-circle {
  background-color: #bbb;
  border-radius: 50%;
  display: inline-block;
  height: 25px;
  width: 25px;
}

.progress-circle:hover {
  background-color: rgb(14, 13, 13);
  border-radius: 50%;
  display: inline-block;
  height: 25px;
  transition-duration: 1.5s;
  width: 25px;
}
.progress-circle-active {
  background-color: rgb(5, 5, 5);
  border: solid 1px white;
  border-radius: 50%;
  display: inline-block;
  height: 25px;
  transition-duration: 1.5s;
  width: 25px;
}

.close-slider {
  background-color: #bbb;
  display: inline-block;
  height: 25px;
  width: 25px;
}

.close-slider:hover {
  background-color: rgb(87, 1, 1);
  display: inline-block;
  height: 25px;
  transition-duration: 1s;
  width: 25px;
}

.pause {
  background-color: #bbb;
  display: inline-block;
  height: 25px;
  transition-duration: 1s;
  width: 25px;
}

.pause:hover {
  background-color: rgb(179, 82, 3);
  display: inline-block;
  height: 25px;
  transition-duration: 1s;
  width: 25px;
}

.paused {
  background-color: rgb(179, 82, 3);
  display: inline-block;
  height: 25px;
  transition-duration: 1s;
  width: 25px;
}

